tests/toylang/neg/000255_mutation.toylang
program a = { bool var a : bool; } .
